--- a/.gitignore
+++ b/.gitignore
@@ -156,3 +156,4 @@ cython_debug/
 .idea/inspectionProfiles/Project_Default.xml
 .idea/comp-472-project.iml
 .idea/inspectionProfiles/profiles_settings.xml
+.idea/workspace.xml
